--- a/requirements.txt
+++ b/requirements.txt
@@ -1,96 +1,30 @@
-absl-py==2.2.2
-altair==4.2.2
-astunparse==1.6.3
-attrs==25.3.0
-blinker==1.9.0
-cachetools==5.5.2
-certifi==2025.4.26
-charset-normalizer==3.4.2
-click==8.2.1
-colorama==0.4.6
-contourpy==1.3.2
-cycler==0.12.1
-entrypoints==0.4
-flatbuffers==25.2.10
-fonttools==4.58.0
-gast==0.4.0
-gensim==4.3.3
-gitdb==4.0.12
-GitPython==3.1.44
-google-auth==2.40.2
-google-auth-oauthlib==0.4.6
-google-pasta==0.2.0
-grpcio==1.71.0
-h5py==3.13.0
-idna==3.10
-importlib_metadata==8.7.0
-Jinja2==3.1.6
-joblib==1.5.1
-jsonschema==4.23.0
-jsonschema-specifications==2025.4.1
-keras==2.10.0
-Keras-Preprocessing==1.1.2
-kiwisolver==1.4.8
-libclang==18.1.1
-Markdown==3.8
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-matplotlib==3.10.3
-mdurl==0.1.2
-namex==0.0.9
-narwhals==1.40.0
-nltk==3.9.1
-numpy==1.26.4
-oauthlib==3.2.2
-opt_einsum==3.4.0
-optree==0.15.0
-packaging==24.2
-pandas==2.2.3
-pillow==11.2.1
-protobuf==3.19.6
-pyarrow==20.0.0
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
-pydeck==0.9.1
-Pygments==2.19.1
-Pympler==1.1
-pyparsing==3.2.3
-python-dateutil==2.9.0.post0
-pytz==2025.2
-referencing==0.36.2
-regex==2024.11.6
-requests==2.32.3
-requests-oauthlib==2.0.0
-rich==14.0.0
-rpds-py==0.25.1
-rsa==4.9.1
-Sastrawi==1.0.1
-scikit-learn==1.6.1
+# Core
+numpy==1.23.5
+pandas==1.5.3
+scikit-learn==1.1.3
 scipy==1.10.1
-seaborn==0.13.2
-six==1.17.0
-smart-open==7.1.0
-smmap==5.0.2
-streamlit==1.22.0
-tenacity==8.5.0
-tensorboard==2.10.1
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
-tensorflow==2.10.0
-tensorflow-estimator==2.10.0
-tensorflow-io-gcs-filesystem==0.31.0
-termcolor==3.1.0
-threadpoolctl==3.6.0
-toml==0.10.2
-toolz==1.0.0
-tornado==6.5.1
+
+# NLP
+nltk==3.9.1
+Sastrawi==1.0.1
 tqdm==4.67.1
-typing_extensions==4.13.2
-tzdata==2025.2
-tzlocal==5.3.1
-urllib3==2.4.0
-validators==0.35.0
-watchdog==6.0.0
-Werkzeug==3.1.3
-wrapt==1.17.2
-zipp==3.22.0
+gensim==4.3.1
+
+# Deep Learning
+tensorflow==2.10.0
+keras==2.10.0
+
+# Visualisasi
+matplotlib==3.6.2
+seaborn==0.12.2
+
+# Streamlit App
+streamlit==1.22.0
+altair==4.2.2
+pydeck==0.8.0
+watchdog==2.1.9
+
+# Utilitas
+joblib==1.2.0
+requests==2.28.2
+protobuf==3.19.6
